--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="app_name">AdMobSample</string>
     <string name="hello_world">jorgesys!</string>
     <string name="action_settings">Settings</string>
-   <string name="banner_ad_unit_id">[Add your banner AD unit ID]</string>
+   <string name="banner_ad_unit_id">ca-app-pub-7980974166589121/6000279693</string>
 </resources>
