--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="hello_world">jorgesys!</string>
     <string name="action_settings">Settings</string>
    <string name="banner_ad_unit_id">ca-app-pub-7980974166589121/6000279693</string>
+
+    <string name="banner_ad_unit_id_1">ca-app-pub-3748175831230810/7065359892</string>
 </resources>
